--- a/app/public/app/layout/partials/navigation.tpl.html
+++ b/app/public/app/layout/partials/navigation.tpl.html
@@ -293,6 +293,11 @@
                 <a href="#"><i class="fa fa-lg fa-fw fa-comment-o"><em class="bg-color-pink flash animated">!</em></i> <span class="menu-item-parent">{{getWord('Smart Chat API')}} <sup>{{getWord('beta')}}</sup></span></a>
                 <div aside-chat-widget></div>
             </li>
+            
+            <li data-ui-sref-active="active">
+                <a data-ui-sref="app.widgets" title="Widgets"><i class="fa fa-lg fa-fw fa-cog"></i><span
+                        class="menu-item-parent">{{getWord('Setup')}}</span></a>
+            </li>
         </ul>
     </nav>
 
